Add support to launch new authentication requests for users
Signed-off-by: Calin Neamtu <nilac8991@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -52,15 +53,18 @@
                 android:id="@+id/current_session_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
                 android:layout_weight="1"
-                android:text="Retrieve Current Session" />
+                android:text="Retrieve Current Session"
+                app:cornerRadius="8dp" />
 
             <Button
                 android:id="@+id/previous_session_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Retrieve Previous Session" />
+                android:text="Retrieve Previous Session"
+                app:cornerRadius="8dp" />
 
         </LinearLayout>
 
