--- a/app/src/main/res/layout/user_authentication.xml
+++ b/app/src/main/res/layout/user_authentication.xml
@@ -23,50 +23,73 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?actionBarSize"
-        android:orientation="vertical"
-        android:padding="14dp">
+        android:orientation="vertical">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/authentication_scheme_input_layout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        <LinearLayout
+            android:id="@+id/auth_request_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Authentication Scheme"
-            app:boxBackgroundColor="@android:color/transparent">
+            android:orientation="vertical"
+            android:padding="14dp"
+            tools:visibility="visible">
 
-            <AutoCompleteTextView
-                android:id="@+id/authentication_scheme_input"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/authentication_scheme_input_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:focusableInTouchMode="false" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:hint="Authentication Scheme"
+                app:boxBackgroundColor="@android:color/transparent">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/flags_input_layout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                <AutoCompleteTextView
+                    android:id="@+id/authentication_scheme_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:focusableInTouchMode="false" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/flags_input_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:hint="Flags"
+                app:boxBackgroundColor="@android:color/transparent">
+
+                <AutoCompleteTextView
+                    android:id="@+id/flags_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:focusableInTouchMode="false" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/send_auth_request_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:padding="15dp"
+                android:text="Send Authentication Request"
+                app:cornerRadius="8dp" />
+
+        </LinearLayout>
+
+        <ScrollView
+            android:id="@+id/user_session_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:hint="Flags"
-            app:boxBackgroundColor="@android:color/transparent">
+            android:layout_height="match_parent">
 
-            <AutoCompleteTextView
-                android:id="@+id/flags_input"
+            <TextView
+                android:id="@+id/user_session"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:focusableInTouchMode="false" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                tools:text="Content" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/send_auth_request_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:padding="15dp"
-            android:text="Send Authentication Request"
-            app:cornerRadius="8dp" />
+        </ScrollView>
 
     </LinearLayout>
 
