Add support for logout request action
Signed-off-by: Calin Neamtu <nilac8991@gmail.com>

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,10 @@
         android:orderInCategory="100"
         android:title="Authenticate New User"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:title="Logout"
+        app:showAsAction="never" />
 </menu>
