Add support for lockscreenStatus state API
Signed-off-by: Calin Neamtu <nilac8991@gmail.com>

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,6 +10,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_start_service"
+        android:orderInCategory="100"
+        android:title="Start Status Service"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
         android:title="Logout"
