Update how we're parsing the previous user session & authentication responses
Signed-off-by: Calin <nilac8991@gmail.com>

--- a/app/src/main/res/layout/user_authentication.xml
+++ b/app/src/main/res/layout/user_authentication.xml
@@ -80,7 +80,9 @@
         <ScrollView
             android:id="@+id/user_session_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <LinearLayout
                 android:layout_width="match_parent"
