Implement lockscreen "showmessage" API support
Signed-off-by: Calin <nilac8991@gmail.com>

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,6 +16,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_set_lockscreen_message"
+        android:orderInCategory="100"
+        android:title="Manage Lock Screen Message"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
         android:title="Logout"
