--- a/app/src/main/res/layout/user_authentication.xml
+++ b/app/src/main/res/layout/user_authentication.xml
@@ -66,6 +66,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/send_auth_request_btn"
+                style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
