--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,143 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_primary">#081A88</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#28369E</color>
+    <color name="md_theme_onPrimaryContainer">#9FA9FF</color>
+    <color name="md_theme_secondary">#9C4400</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#FE7F2D</color>
+    <color name="md_theme_onSecondaryContainer">#622800</color>
+    <color name="md_theme_tertiary">#000000</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#101054</color>
+    <color name="md_theme_onTertiaryContainer">#7B7DC3</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#93000A</color>
+    <color name="md_theme_background">#FBF8FF</color>
+    <color name="md_theme_onBackground">#1B1B22</color>
+    <color name="md_theme_surface">#FBF8FF</color>
+    <color name="md_theme_onSurface">#1B1B22</color>
+    <color name="md_theme_surfaceVariant">#E2E1F1</color>
+    <color name="md_theme_onSurfaceVariant">#454653</color>
+    <color name="md_theme_outline">#767684</color>
+    <color name="md_theme_outlineVariant">#C6C5D5</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#303037</color>
+    <color name="md_theme_inverseOnSurface">#F2EFF9</color>
+    <color name="md_theme_inversePrimary">#BCC2FF</color>
+    <color name="md_theme_primaryFixed">#DFE0FF</color>
+    <color name="md_theme_onPrimaryFixed">#000B62</color>
+    <color name="md_theme_primaryFixedDim">#BCC2FF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#2D3AA2</color>
+    <color name="md_theme_secondaryFixed">#FFDBCA</color>
+    <color name="md_theme_onSecondaryFixed">#331100</color>
+    <color name="md_theme_secondaryFixedDim">#FFB68F</color>
+    <color name="md_theme_onSecondaryFixedVariant">#773200</color>
+    <color name="md_theme_tertiaryFixed">#E1E0FF</color>
+    <color name="md_theme_onTertiaryFixed">#101054</color>
+    <color name="md_theme_tertiaryFixedDim">#C0C1FF</color>
+    <color name="md_theme_onTertiaryFixedVariant">#3E4081</color>
+    <color name="md_theme_surfaceDim">#DBD9E2</color>
+    <color name="md_theme_surfaceBright">#FBF8FF</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F5F2FC</color>
+    <color name="md_theme_surfaceContainer">#EFECF6</color>
+    <color name="md_theme_surfaceContainerHigh">#E9E7F0</color>
+    <color name="md_theme_surfaceContainerHighest">#E3E1EB</color>
+    <color name="md_theme_primary_mediumContrast">#081A88</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#28369E</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#D4D7FF</color>
+    <color name="md_theme_secondary_mediumContrast">#5D2600</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#B44F00</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#000000</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#101054</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#9EA0E9</color>
+    <color name="md_theme_error_mediumContrast">#740006</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#CF2C27</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#FBF8FF</color>
+    <color name="md_theme_onBackground_mediumContrast">#1B1B22</color>
+    <color name="md_theme_surface_mediumContrast">#FBF8FF</color>
+    <color name="md_theme_onSurface_mediumContrast">#101117</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#E2E1F1</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#343541</color>
+    <color name="md_theme_outline_mediumContrast">#51515E</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#6C6C7A</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#303037</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#F2EFF9</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#BCC2FF</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#5663CB</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#3C4AB1</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#B44F00</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#8D3D00</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#6467AA</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#4C4E90</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#C7C5CE</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#FBF8FF</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F5F2FC</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#E9E7F0</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#DEDCE5</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#D2D0DA</color>
+    <color name="md_theme_primary_highContrast">#071988</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#28369E</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#4D1E00</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#7B3400</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#000000</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#101054</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#CCCCFF</color>
+    <color name="md_theme_error_highContrast">#600004</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#98000A</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#FBF8FF</color>
+    <color name="md_theme_onBackground_highContrast">#1B1B22</color>
+    <color name="md_theme_surface_highContrast">#FBF8FF</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#E2E1F1</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#000000</color>
+    <color name="md_theme_outline_highContrast">#2A2B37</color>
+    <color name="md_theme_outlineVariant_highContrast">#474855</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#303037</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#BCC2FF</color>
+    <color name="md_theme_primaryFixed_highContrast">#2F3DA5</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#13228E</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#7B3400</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#582300</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#404283</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#292B6B</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#B9B8C1</color>
+    <color name="md_theme_surfaceBright_highContrast">#FBF8FF</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F2EFF9</color>
+    <color name="md_theme_surfaceContainer_highContrast">#E3E1EB</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#D5D3DC</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#C7C5CE</color>
 </resources>
