--- a/app/src/main/res/layout/loading_popup_screen.xml
+++ b/app/src/main/res/layout/loading_popup_screen.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical"
-    tools:background="@color/black">
+    android:orientation="vertical">
 
     <ProgressBar
         android:layout_width="30dp"
